[package]
name = "pro3"
version = "0.1.0"
authors = ["SparrowLii <liyuancylx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numpy = "0.12.1"
pyo3 = "0.12"
ndarray = {version="0.14.0",features=["rayon"]}
